<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sf.jasperreports</groupId>
	<artifactId>jasperreports-custom-visualization</artifactId>
	<version>6.8.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>JasperReports Custom Visualization Component</name>
	<url>http://jasperreports.sourceforge.net</url>
	<description>JasperReports Library Custom Visualization Component</description>
	<licenses>
		<license>
			<name>GNU Lesser General Public License</name>
			<url>http://jasperreports.sourceforge.net/license.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:https://github.com/TIBCOSoftware/jasperreports.git</connection>
		<tag>jr-6-8-0</tag>
		<url>https://github.com/TIBCOSoftware/jasperreports</url>
	</scm>
	<repositories>
		<repository>
			<id>jaspersoft-third-party</id>
			<url>http://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
		</repository>
		<repository>
			<id>jr-ce-releases</id>
			<name>JasperReports CE Releases</name>
			<url>http://jaspersoft.jfrog.io/jaspersoft/jr-ce-releases</url>
		</repository>
		<repository>
			<id>jr-ce-snapshots</id>
			<name>JasperReports CE Snapshots</name>
			<url>http://jaspersoft.jfrog.io/jaspersoft/jr-ce-snapshots</url>
		</repository>
	</repositories>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
					<compilerArgument>-Xlint:deprecation,-unchecked</compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Built-By>TIBCO Software Inc.</Built-By>
						</manifestEntries>
						<manifestSections>
							<manifestSection>
								<name>net/sf/jasperreports/customvisualization/</name>
								<manifestEntries>
									<Specification-Title>JasperReports Library Custom Visualization Component</Specification-Title>
									<Specification-Version>${project.version}</Specification-Version>
									<Specification-Vendor>TIBCO Software Inc.</Specification-Vendor>
									<Implementation-Title>net.sf.jasperreports.customvisualization</Implementation-Title>
									<Implementation-Version>${project.version}</Implementation-Version>
									<Implementation-Vendor>TIBCO Software Inc.</Implementation-Vendor>
								</manifestEntries>
							</manifestSection>
						</manifestSections>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>jr-ce-releases</id>
			<name>JasperReports CE Releases</name>
			<url>http://jaspersoft.jfrog.io/jaspersoft/jr-ce-releases</url>
		</repository>
		<snapshotRepository>
			<id>jr-ce-snapshots</id>
			<name>JasperReports CE Snapshots</name>
			<url>http://jaspersoft.jfrog.io/jaspersoft/jr-ce-snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	<dependencies>
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>6.8.0-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-bridge</artifactId>
			<version>1.9</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>xmlgraphics-commons</artifactId>
			<version>2.0</version>
			<scope>runtime</scope>
		</dependency>
	</dependencies>
</project>
